src/main/java/com/example/couponsproject/error/ErrorDetailsDto.java
package com.example.couponsproject.error;


import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.ToString;

@Data
@NoArgsConstructor
@ToString
@AllArgsConstructor
public class ErrorDetailsDto {
    private String errorMsg;
}
